@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: type_prob.h,v 1.26 2011/01/02 11:10:40 bzfheinz Exp $"
+#pragma ident "@(#) $Id: type_prob.h,v 1.27 2011/01/13 14:47:22 bzfberth Exp $"
 
 /**@file   type_prob.h
  * @ingroup TYPEDEFINITIONS
@@ -129,6 +129,7 @@ typedef struct SCIP_ProbData SCIP_PROBDATA;       /**< user problem data set by 
  *  - varmap,         : a hashmap which stores the mapping of source variables to corresponding target variables
  *  - consmap,        : a hashmap which stores the mapping of source contraints to corresponding target constraints
  *  - targetdata      : pointer to the target user problem data to create
+ *  - global          : create a global or a local copy? 
  *
  *  output:
  *  - result          : pointer to store the result of the call
@@ -138,7 +139,7 @@ typedef struct SCIP_ProbData SCIP_PROBDATA;       /**< user problem data set by 
  *  - SCIP_SUCCESS    : the copying process was successfully performed
  */
 #define SCIP_DECL_PROBCOPY(x) SCIP_RETCODE x (SCIP* scip, SCIP* sourcescip, SCIP_PROBDATA* sourcedata, \
-      SCIP_HASHMAP* varmap, SCIP_HASHMAP* consmap, SCIP_PROBDATA** targetdata, SCIP_RESULT* result)
+      SCIP_HASHMAP* varmap, SCIP_HASHMAP* consmap, SCIP_PROBDATA** targetdata, SCIP_Bool global, SCIP_RESULT* result)
 
 #ifdef __cplusplus
 }
